sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:13: error: '<-' expected but ')' found.
    for (compteur<+getNombreValeurs()-2 to 0){
                                            ^AlgCocktailSort1:19: error: illegal start of simple expression
  }
  ^